@@ -1,0 +1,13 @@
+<!--/* $Id$ */-->
+<th:block th:with="id=${#strings.randomAlphanumeric(10)}">
+  [(${figure.asJavascript(id)})]
+  <div th:id="${id}"></div>
+  <script th:inline="javascript">
+    require(['https://cdn.plot.ly/plotly-latest.min.js'],
+            Plotly => {
+              var target_[(${id})] = document.getElementById([[${id}]]);
+                [(${figure.context.get('figure')})]
+                [(${figure.context.get('plotFunction')})]
+            })
+  </script>
+</th:block>
