@@ -1,5 +1,9 @@
 2021-03-10  Allen D. Ball  <ball@hcf.dev>
 
+	* src/main/java/ganymede/server/renderer/AbstractThymeleafHTMLRenderer.java:
+	Initial writing; refactored SparkDatasetRenderer and
+	TablesawPlotlyFigureRenderer.
+
 	* src/main/java/ganymede/server/renderer/SparkDatasetRenderer.java:
 	Initial writing.
 
